[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["1119-2916 <ti11192916@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
discordwebhook = "^1.0.3"
functions-framework = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
